--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
     "sqlite3": "^5.1.6"
+  },
+  "scripts": {
+    "start": "nodemon -w ./ -e js,ejs,json index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
