--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "shaon",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
